# lamassu-labs

./: .env.example  .env.example.backup.1752710146  .eslintrc.js  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .prettierrc  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT_STATUS.md  LATEST_DEPLOYMENT.md  LICENSE  LICENSE-APACHE  README.md  deploy_remaining_contracts.sh  deploy_trust_verifier_only.sh  pyproject.toml  requirements-dev.txt  requirements.txt  requirements_trustwrapper.txt  setup.py  simple_api.py  sprint9-hackathon-zk-verified-ai-marketplace.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  code-quality.yml  deploy.yml
agents/: __init__.py  link_finder_agent.py  region_manager.py
archive/data/: aleo_contract_integration_results.json  complete-integration-test-results.json  comprehensive_infrastructure_results.json  demo_validation_results.json  e2e_real_integration_results.json  federated_learning_poc_results_1750897135.json  fixed_oracle_integration_results.json  live_oracle_integration_results.json  ml_oracle_consensus_poc_results_1750897600.json  production_readiness_results.json  production_validation_results.json  real_infrastructure_test_results.json  real_infrastructure_validation_results.json  realtime_oracle_test_results.json  zk_proof_benchmark_results_1750896587.json
archive/eliza-integration/: README.md
archive/phase-completions/: PHASE_1_COMPLETE.md
archive/sprints/: sprint11-trustwrapper-completed-2025-06-23.md  sprint13-ai-agent-partnerships-completed-20250624.md  sprint14-trustwrapper-real-value-mvp.md  sprint17-defi-integration-validation.md  sprint23-trustwrapper-v3-architecture-planning.md  sprint24-trustwrapper-v3-phase1-implementation.md  sprint9-hackathon-zk-verified-ai-marketplace-completed-20250622.md
contracts/mento-labs/: SimpleOracle.sol  VerifiedOracle.sol
demo/: DEMO_GUIDE.md  README.md  __init__.py  demo.py  demo_event_wrapper.py  demo_external_agents.py  demo_requests_wrapper.py  demo_scraper_wrapper.py  demo_treasury_wrapper.py  quality_consensus_demo_auto.py  run_all_demos.py  test_visual_demo.py  trustwrapper_showcase.py  ultimate_defi_presentation.py  xai_trustwrapper_demo.py  xai_trustwrapper_demo_auto.py
demo/archive/: demo_all_non_interactive.py  demo_real_world_integrations.py  demo_requests_wrapper.py  quick_value_demo.py  test_wrapper.py
demo/examples/: consensus_visualization_auto.py  event_wrapper.py  full_stack_comparison.py  performance_verification_demo.py  treasury_wrapper.py  (+1 more)
design-system-tokens/: design-tokens.css  tokens.ts  types.ts
docs/: HACKATHON_READY_SUMMARY.md  INTEGRATED_TECHNOLOGY_STORY.md  README.md  TRUSTWRAPPER_COMMUNITY_ENGAGEMENT_PLAN.md  TRUSTWRAPPER_ELIZA_PLUGIN_LAUNCH_CHECKLIST.md  TRUSTWRAPPER_GITHUB_QUICK_SETUP.md  TRUSTWRAPPER_LAUNCH_ANNOUNCEMENT.md  TRUSTWRAPPER_PROGRESSIVE_ONBOARDING.md
examples/: README.md  example_usage.py  performance_optimization.py  quick_start.py  register_agent.py  trustwrapper_integration.py  verify_execution.py
internal_docs/: INTERNAL_DOCS_README.md  SIMPLIFIED_STRUCTURE_PROPOSAL.md
k8s/: database-cluster.yaml  ingress.yaml  load-balancer.yaml  monitoring.yaml  multi-region-deployment.yaml  namespace.yaml  redis-cluster.yaml  secrets.yaml  trustwrapper-deployment.yaml
memory-bank/: 00-LAMASSU_LABS_KNOWLEDGE_SYSTEM.md  01-README-DevProcess.md  02-activeContext.md  03-progress.md  HACKATHON_MODULAR_STRATEGY.md  MVP_TECHNICAL_ROADMAP.md  zk-berlin-hackathon-sponsors-research.md
monitoring/: DEPLOYMENT_COMPLETE_FINAL.md  ZIGGURAT_DEPLOYMENT_SUCCESS.md  contract_monitor.py  create-ziggurat-web-interface.py  deploy-to-ziggurat.py  update-monitoring-data.js
oracle-verification/: monitoring-infrastructure.ts  performance-benchmarking.ts
research/: 00_RESEARCH_INDEX.md  02_browser_automation_market_size.md  05_ai_agent_performance_standards.md  07_ai_agent_marketplaces_business_models.md  08_browser_automation_compliance_landscape.md  09_ai_agents_competitive_dynamics.md  EXECUTIVE_SUMMARY_ALL_RESEARCH.md  EXECUTIVE_SUMMARY_MARKET_RESEARCH.md  README_ZK_AGENTS.md  web3_ai_agent_technical_feasibility_analysis.md  zk_agent_executive_pitch.md  zk_agent_go_to_market.md  zk_agent_implementation_summary.md  zk_agent_pitch_deck_outline.md  zk_agent_quick_reference.md  zk_agent_technical_roadmap.md  zk_professional_agent_concepts.md
scripts/: README.md  compile_leo.sh  deploy-k8s.sh  deploy_contracts.sh  find_docs_to_update.sh  install_leo_manual.sh  organize_files.sh  run-full-validation.sh  test_contracts.sh  test_deployment.py  test_local.sh
src/: __init__.py
src/trustwrapper-v3/: pyproject.toml  requirements.txt
tests/: README.md  oauth_popup_validation_report_1749415650.json  oauth_popup_validation_report_1749416483.json  production_oauth_search_validation_corrected_1749420875.json  production_oauth_search_validation_results_1749420236.json  pytest.ini  quick_oauth_test_report_1749417112.json  report_test_demos.py.json  report_test_performance.py.json  requirements_openai.txt  run_tests.py  test_comprehensive_registration_security.py  test_demos.py  test_leo_integration.py  test_oauth_flow_locally.py  test_oauth_integration_simple.py  test_oauth_registration_flow.py  test_oauth_system.py  test_performance.py  test_quality_consensus.py  test_real_agents.py  test_report_1750523788.json  test_security_deployment.py  test_trust_wrapper.py  test_trust_wrapper_simple.py  test_trustwrapper_openai.py  test_xai_integration.py  z_05a2f5d17a363ca9_oauth_authentication_service_py.html  z_0debbeb969c35249_oauth_authentication_service_py.html  z_1f72e874487ca1f5_oauth_handlers_py.html  z_36200cad944fbedc_oauth_handlers_py.html
tools/: README.md
treasury_monitor/: .env.example  Dockerfile  Dockerfile.api  cloudbuild.yaml  requirements.txt
trustwrapper-enterprise/: README.md
typescript_service/: Dockerfile  package.json  tsconfig.json
web3_agents/: setup.py
(+898 files in other folders)
