[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trustwrapper-v3"
version = "3.0.0-alpha1"
description = "Universal Multi-Chain AI Verification Platform"
readme = "README.md"
license = {text = "MIT + Enterprise"}
authors = [
    {name = "Lamassu Labs", email = "contact@lamassulabs.ai"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Security :: Cryptography",
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "httpx>=0.25.2",
    "asyncpg>=0.29.0",
    "redis>=5.0.1",
    "sqlalchemy[asyncio]>=2.0.23",
    "web3>=6.12.0",
    "pycardano>=0.11.0",
    "solana>=0.32.1",
    "bitcoin>=1.1.42",
    "cryptography>=41.0.7",
    "jwt>=1.3.1",
    "bcrypt>=4.1.2",
    "aiohttp>=3.9.1",
    "asyncio-mqtt>=0.16.1",
    "ujson>=5.8.0",
    "prometheus-client>=0.19.0",
    "structlog>=23.2.0",
    "kubernetes>=28.1.0",
    "docker>=6.1.3",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "black>=23.11.0",
    "ruff>=0.1.6",
]
enterprise = [
    "redis-enterprise>=2.0.0",
    "vault-client>=0.8.0",
    "enterprise-monitoring>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/lamassu-labs/trustwrapper"
Documentation = "https://docs.lamassulabs.ai"
Repository = "https://github.com/lamassu-labs/trustwrapper"
"Bug Tracker" = "https://github.com/lamassu-labs/trustwrapper/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["trustwrapper_v3*"]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.ruff]
target-version = "py311"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=trustwrapper_v3",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=90",
    "--asyncio-mode=auto",
]
